--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
+        "start": "node src/server.ts",
         "dev": "ts-node-dev src/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
