--- a/package.json
+++ b/package.json
@@ -1,19 +1,46 @@
 {
-  "name": "nlw-valoriza",
-  "version": "1.0.0",
-  "description": "",
-  "main": "/src/server.ts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Escandiuzzi/NLW-Valoriza.git"
-  },
-  "author": "Luiz Felipe Escandiuzzi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Escandiuzzi/NLW-Valoriza/issues"
-  },
-  "homepage": "https://github.com/Escandiuzzi/NLW-Valoriza#readme"
+    "name": "nlw-valoriza",
+    "version": "1.0.0",
+    "description": "",
+    "main": "/src/server.ts",
+    "scripts": {
+        "start": "node src/server.ts",
+        "dev": "ts-node-dev src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.12",
+        "@types/nodemailer": "^6.4.4",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.3.5"
+    },
+    "dependencies": {
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.4",
+        "@types/uuid": "^8.3.1",
+        "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.4.0",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "nodemailer": "^6.6.3",
+        "reflect-metadata": "^0.1.13",
+        "sqlite3": "^5.0.2",
+        "typeorm": "^0.2.34",
+        "uuid": "^8.3.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Escandiuzzi/NLW-Valoriza.git"
+    },
+    "author": "Luiz Felipe Escandiuzzi",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Escandiuzzi/NLW-Valoriza/issues"
+    },
+    "homepage": "https://github.com/Escandiuzzi/NLW-Valoriza#readme"
 }
