--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "/src/server.ts",
     "scripts": {
         "start": "node src/server.ts",
+        "build": "tsc",
+        "postinstall": "npm run build",
         "dev": "ts-node-dev src/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
