--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "nlw-valoriza",
     "version": "1.0.0",
+    "engines": {
+        "node": "14.17.3"
+    },
     "description": "",
     "main": "/src/server.ts",
     "scripts": {
