--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "description": "",
     "main": "/src/server.ts",
     "scripts": {
-        "start": "node src/server.ts",
+        "start": "node src/server.js",
         "build": "tsc",
         "postinstall": "npm run build",
         "dev": "ts-node-dev src/server.ts",
